--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "stack": "container",
   "env": {
     "API_KEY": {
-      "description": "Dapatkan API KEY di web my.telegram.org Masukan yg APP ID Telegram",
+      "description": "Dapatkan API KEY di web my.telegram.org Masukan yg APP ID Telegramnya",
       "required": true
     },
     "API_HASH": {
@@ -15,7 +15,7 @@
       "required": true
     },
     "BOT_TOKEN": {
-      "description": "Buat Bot di t.me/botfather Masukan BOT tokennya disini",
+      "description": "Buat Bot di t.me/botfather Masukan BOT tokennya disini kontol",
       "required": false
     },
     "BOT_USERNAME": {
@@ -27,7 +27,7 @@
       "required": true
     },
     "HEROKU_APP_NAME": {
-      "description": "Nama App heroku, Nama App yang paling pertama di isi (liat paling atas)",
+      "description": "Nama App heroku, Nama App yang paling pertama di isi (liat paling ☝️ atas)",
       "required": true
     },
     "HEROKU_API_KEY": {
@@ -35,7 +35,7 @@
       "required": true
     },
     "BOTLOG_CHATID": {
-      "description": "Buatlah grup telegram publik lalu masukan @MissRose_bot ketik /id, masukan id grup nya disini. contoh: -1001473548xxx",
+      "description": "Buatlah grup telegram publik lalu masukan @MissRose_bot ketik /id, masukan id grup nya disini memek. contoh: -1001473548xxx",
       "value": "Isi id grup mu wajib dengan awalan -100",
       "required": true
     }
